

Changes in 3.2 -- current

* Dependencies change:
  - the qpageview module, thus far in frescobaldi_app/qpageview, is now,
    because of its generic nature, a separate project at
    http://github.com/frescobaldi/qpageview . This package needs to be
    installed for Frescobaldi to work; it is used by the Music View and other
    viewers inside Frescobaldi.
* Translations:
  - some missing strings from Qt dialogs were added (WB, #1224)
  - updated nl translation by Wilbert Berendsen


Changes in 3.1.2 -- Easter 2020

* Bug fixes:
  - fixed #1255, AttributeError: 'NoneType' object has no attribute 'cursor'
  - fixed "Two Pages (first page right)" for both modes, other should be "left"
  - fixed pinch gesture zoom in music view on Mac
  - fixed #30, Printing score under Mac OS X
  - fixed #860, OSX: Frescobaldi overrides critical cursor navigation keyboard shortcuts;
    new shortcuts:
    - next document: ctrl+tab
    - previous document: ctrl+shift+tab
    - start of line: cmd+left
    - end of line: cmd+right
  - fixed #1087, File names in document tabs are not shown correctly on Mac
  - fixed #1272, Global menu with no windows on Mac is not working
  - fixed #1232, Error using convert-ly in Frescobaldi 3.1 Mac app
* Improvements:
  - add DE hyphen patterns and copyright info (#1275)
* Translations:
  - Userguide now has its own PO files in i18n/userguide, and the Frescobaldi
    application itself has the PO files in i18n/frescobaldi, see README-
    translations.
  - updated nl translation by Wilbert Berendsen
  - updated Italian translation by Davide Liessi


Changes in 3.1.1 -- January 4th, 2020

* Bug fixes:
  - fixed #1242, AttributeError: 'PopplerDocument' has no attribute 'ispresent'
  - fixed #1234, NameError: 'QPinchGesture' is not defined (pinch in music view)
  - fixed #1231, NameError: 'doc' is not defined (when printing on Mac OSX)


Changes in 3.1 -- December 27th, 2019

* Requirement changes:
  - Frescobaldi now requires Python3.3+