@@ -1160,6 +1160,8 @@ class MainWindow(QMainWindow):
         t.addAction(ma.music_prev_page)
         t.addAction(ma.music_pager)
         t.addAction(ma.music_next_page)
+        t.addSeparator()
+        t.addAction(ma.music_clear)
 
     def translateUI(self):
         self.toolbar_main.setWindowTitle(_("Main Toolbar"))
