@@ -10,6 +10,7 @@ Changes in 3.2 -- current
     http://github.com/frescobaldi/qpageview . This package needs to be
     installed for Frescobaldi to work; it is used by the Music View and other
     viewers inside Frescobaldi.
+* Implemented wish #1235 Clear music view
 * Translations:
   - some missing strings from Qt dialogs were added (WB, #1224)
   - updated nl translation by Wilbert Berendsen
